bug_fix: 修改了用户模块的bug，并且新增了上传接口
