# router.go
@@ -10,6 +10,6 @@ import (
 // customizeRegister registers customize routers.
 func customizedRegister(r *server.Hertz) {
 	r.GET("/ping", handler.Ping)
-
+	r.POST("/upload/file", handler.FileUpload)
 	// your code ...
 }
